GNOME Bugzilla – Bug 732527
Fix dead conditional
Last modified: 2014-08-08 15:16:27 UTC
See patch, I guess this was removed to ease debugging and forgotten? Or was it removed because it's now necessary for that page to refresh properly? I don't see any calls to gs_shell_updates_invalidate() which seems off.
Created attachment 279640 [details] [review] Fix dead conditional cache_valid is never read, and so gs_shell_updates_invalidate does nothing. Looks like this was introduced for debugging and forgotten? The effect of this change is to go straight to the list of updates when visiting the updates page (if the cache is valid), rather than flashing Checking for updates for a fraction of a second.
Review of attachment 279640 [details] [review]: I tested this today and simply reinstating that conditional seems to break our somewhat fragile state handling in same cases. I'll post an alternative patch in a minute, can you give it a try please?
Created attachment 279994 [details] [review] Improve update page state handling ... to avoid flashing the "Checking for updates" label when switching between different pages.
Created attachment 279995 [details] [review] Improve update page state handling ... to avoid flashing the "Checking for updates" label when switching between different pages.
Seems good to me; well, there are still plenty of bugs with this page, but I don't notice any regressions from your patch.
I did a bit more testing and found a few issues with my first patch. I've fixed those up now and pushed this as https://git.gnome.org/browse/gnome-software/commit/?id=26d430cbf141c08c34055c39af1ec65f943dacba