Avoid a visible redraw when switching to the updates page

Improve internal state handling to avoid flashing the "Checking for
updates" label when we already have all the data available.

https://bugzilla.gnome.org/show_bug.cgi?id=732527